--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,20 @@
         #button:hover{
             box-shadow: 1px -2px 6px rgb(0, 255, 255),-1px 2px 6px rgb(0, 255, 255);
         }
-
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+            #chatbox {
+                width: 95%;
+                max-width: none;
+                font-size: 0.9rem;
+            }
+            #button {
+                padding: 0 10px;
+                font-size: 0.9rem;
+            }
+        }
     </style>
 </head>
 <body>
