--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,9 @@
             flex: 1;
             border-radius: 10px;
             padding: 0 10px;
-            margin-right: 4px;
+           /* margin-right: 4px; */
+            margin-left: 4px; /*for joint of inputs*/
+            margin-bottom: -10px;/*for joint of inputs*/
             outline: none;
             transition: border-color 0.2s ease-out;
         }
@@ -75,6 +77,7 @@
             color: #fff700;
             transition: all 0.5s;
             padding: 0 15px;
+            margin-bottom: -10px;/*for joint of inputs*/
             cursor: pointer;
         }
         #button:hover {
