--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             max-height: 75vh;
             overflow-y: scroll; /* Enable scrolling */
             padding: 10px;
-            margin-top: 80px;
+            margin-top: 100px;
             width: 90%;
             max-width: 1200px;
             margin-bottom: 60px;
@@ -57,7 +57,6 @@
             flex: 1;
             border-radius: 10px;
             padding: 0 10px;
-           /* margin-right: 4px; */
             margin-left: 4px; /*for joint of inputs*/
             margin-bottom: -10px;/*for joint of inputs*/
             outline: none;
@@ -135,7 +134,7 @@
             align-items: center;
             width: 300px;
             height: 500px;
-            background: linear-gradient(rgba(255, 8, 8, 0.91), rgb(0, 255, 251));
+            background: linear-gradient(rgb(251, 3, 3), rgb(0, 255, 251));
             animation: infinite linear 10s rot;
         }
         #h1::after {
