--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             max-height: 75vh;
             overflow-y: scroll; /* Enable scrolling */
             padding: 10px;
-            margin-top: 70px;
+            margin-top: 90px;/*this is to ensure chat box below the h1 tag man */
             width: 90%;
             max-width: 1200px;
             margin-bottom: 10px; /* Reduce margin-bottom */
